Clean up PMD issue. Switch to new PMD plug-in.